--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
 {
-  "manifest_version": "1",
-  "api_version": "1",
+  "required_api_version": "^2.0.0",
   "name": "Exit XFCE",
   "description": "Session logout functions for XFCE desktop.",
   "developer_name": "leiserfg",
